# delphea-cli-rust

./: .env  .gitignore  Cargo.toml  README.md  delphea.sqlite
migrations/2022-12-31-225246_create_sheets/: down.sql  up.sql
migrations/2023-01-01-041958_create_entries/: down.sql  up.sql
migrations/2023-01-01-203504_create_wins/: down.sql  up.sql
src/: cli.rs  colors.rs  database.rs  debug.rs  debuginit.rs  entries.rs  main.rs  menus.rs  models.rs  mods.rs  schema.rs  sheets.rs
