[package]
name = "delphea-cli-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
preferences = "1.1.0"
rand_derive = "0.1"
rand_derive2 = "0.1.18"
rand = "0.8.5"
clap = {version = "4.2.5", features = ["cargo", "derive"]}
tui = "0.19"
crossterm = "0.25"
home = "0.5.4"
log = "0.4" 
tui-logger = { git = "https://github.com/gin66/tui-logger", rev = "3a3568e2464dddc2205e071234135998342d7f1d" }
dialoguer = "0.10.2"
indicatif = "0.17.2"
console = "0.15.4"
enum-iterator = "1.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

#[dependencies.minus]
#version = "^5.3.0"
#features = [
   # Enable features you want. For example
#   "static_output",
#   "search"
#]
