[package]
name = "delphea"
version = "0.1.3"
authors = ["wych(witch) <wych@wychwit.ch>"]
license = "MIT OR Apache-2.0"
description = "A tool to help with decision paralysis."
readme = "README.md"
homepage = "https://github.com/wychwitch/delphea-cli-rust"
repository = "https://github.com/wychwitch/delphea-cli-rust"
keywords = ["cli", "productivity", "organization"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
preferences = "1.1.0"
rand_derive = "0.1"
rand_derive2 = "0.1.18"
rand = "0.8.5"
clap = {version = "4.2.5", features = ["cargo", "derive"]}
tui = "0.19"
crossterm = "0.25"
home = "0.5.4"
log = "0.4" 
dialoguer = "0.10.4"
indicatif = "0.17.3"
console = "0.15.5"
enum-iterator = "1.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

